# kicktipp-predictor

./: .gitignore  .pre-commit-config.yaml  BLUEPRINT.md  CHANGELOG.md  FIX_SUMMARY.md  GEMINI.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PROJECT_REORGANIZATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RECOMMENDED_FEATURES_TO_REMOVE.md  ROADMAP.md  app.py  architecture.md  demo.py  diagnose_model.py  evaluate_model.py  evaluate_season.py  future.txt  predict.py  pyproject.toml  requirements.txt  run_feature_study.sh  train_model.py  tune_hyperparameters.py
.claude/: settings.local.json
config/: all_features.yaml  best_params.json  best_params.yaml  best_params_baseline.yaml  best_params_ppg.yaml  kept_features.yaml  minimal_features.yaml  selected_features.yaml
data/predictions/: debug_eval.csv  debug_season.csv  predictions.json  run_meta.json  tuning_runs.csv
docs/: api.md  architecture.md  results.md
experiments/: README.md  auto_tune.py  evaluate_confidence_gating.py  feature_ablation.py  filter_correlated_features.py  run_baseline.py  tune_baseline.py
jules-scratch/verification/: verify_frontend.py
scripts/: run_shap_analysis.py  tune_heuristic.py
src/features/: feature_engineering.py
src/kicktipp_predictor/: __init__.py  __main__.py  cli.py  config.py  data.py  diagnostics.py  evaluate.py  evaluate_season_entry.py  metrics.py  predictor.py  scoring.py  tune.py
src/kicktipp_predictor/analysis/: __init__.py  shap_analysis.py
src/kicktipp_predictor/config/: best_params.yaml  best_params_default.yaml  best_params_ppg.yaml  config.py  kept_features.yaml  minimal_features.yaml
src/kicktipp_predictor/config/_tmp_test/: kept_features.yaml
src/kicktipp_predictor/core/: __init__.py
src/kicktipp_predictor/core/features/: __init__.py  feature_engineering.py
src/kicktipp_predictor/core/scraper/: __init__.py  data_fetcher.py
src/kicktipp_predictor/models/: __init__.py  confidence_selector.py  evaluate.py  hybrid_predictor.py  metrics.py  ml_model.py  performance_tracker.py  poisson_model.py  predict.py  shap_analysis.py  train.py
src/kicktipp_predictor/web/: __init__.py  app.py  config.py  extensions.py
src/kicktipp_predictor/web/blueprints/api/: __init__.py
src/kicktipp_predictor/web/blueprints/api/v1/: __init__.py  admin.py  evaluation.py  league.py  matches.py  model.py  predictions.py  status.py  teams.py
src/kicktipp_predictor/web/routes/: health.py
src/kicktipp_predictor/web/static/css/: style.css
src/kicktipp_predictor/web/static/js/: main.js
src/kicktipp_predictor/web/templates/: base.html  index.html  match_detail.html  statistics.html  table.html
src/models/: confidence_selector.py  hybrid_predictor.py  ml_model.py  performance_tracker.py  poisson_model.py
src/scraper/: data_fetcher.py
src/web/: app.py
src/web/static/css/: style.css
src/web/static/js/: main.js
src/web/templates/: base.html  index.html  statistics.html  table.html
tests/: test_cli_tune.py  test_config_and_predictor.py  test_config_schema.py  test_dead_code_cleanup.py  test_elo_initialization.py  test_feature_creation_refactor.py  test_feature_loading.py  test_metrics_classes.py  test_metrics_utils.py  test_persistence_v4.py  test_prepare_features.py  test_probabilities.py  test_scoring.py  test_scoring_vectorized.py  test_smoke.py  test_targets.py  test_uncertainty_and_draw.py
