[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kicktipp-predictor"
version = "0.1.0"
description = "Football match prediction models and CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kicktipp Predictor" }]
dependencies = [
  "beautifulsoup4==4.12.3",
  "requests==2.31.0",
  "pandas==2.2.0",
  "numpy==1.26.3",
  "scikit-learn==1.4.0",
  "xgboost==2.0.3",
  "scipy==1.12.0",
  "lxml==5.1.0",
  "flask==3.0.0",
  "joblib==1.3.2",
  "python-dateutil==2.8.2",
  "PyYAML==6.0.2",
  "typer>=0.9.0",
]

[project.optional-dependencies]
tuning = ["optuna>=3.0.0"]
plots = ["shap>=0.45.0", "matplotlib>=3.8.0", "seaborn>=0.13.0"]

[project.scripts]
kicktipp-predictor = "kicktipp_predictor.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"kicktipp_predictor.web" = [
  "templates/*.html",
  "static/css/*.css",
  "static/js/*.js",
]

[tool.pytest.ini_options]
pythonpath = ["src"]


